Prevent referrer-select from overflowing parent

--- a/src/dialog/create.styl
+++ b/src/dialog/create.styl
@@ -13,6 +13,7 @@ body
 
 	& > input, & > select
 		flex: 1
+		overflow: hidden
 
 #url-provider-form
 	flex: 1
